Rework colormap theta plotters

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -643,11 +643,10 @@
     "\n",
     "q1_split = (-torch.pi, torch.pi)\n",
     "plt.ion()\n",
-    "model = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "model_location = 'Models/Split_AEs/Lumped_Mass_202503051257.pth'\n",
-    "model.load_state_dict(torch.load(model_location, weights_only=True))\n",
+    "#model = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "#model_location = 'Models/Split_AEs/Lumped_Mass_202503051257.pth'\n",
+    "#model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "plot_points = mask_points(q1_split, clockwise = train_clockwise)\n",
-    "points_plotter(plot_points[::5])\n",
     "plot_dataset = make_dataset(plot_points)\n",
     "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
     "plot_model_performance(model, plot_dataloader, folder_path)\n"
@@ -709,45 +708,46 @@
     "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
     "# Note: encoder_theta_1_ana and encoder_theta_2_ana each return a tuple (theta, theta).\n",
     "\n",
-    "print(q_grid.size())\n",
-    "print(q_grid)\n",
+    "if train_clockwise:\n",
+    "    raise ValueError(\"This plotter currently only supports plotting counterclockwise performance. Should ben an easy fix\")\n",
     "\n",
     "\n",
-    "for model, model_name in zip(models, model_names):\n",
-    "  print(model_name)\n",
-    "  theta_out = model.encoder(q_grid)\n",
-    "  #theta_out = torch.vmap(model.encoder)(q_grid)\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 8.5))\n",
+    "for i, (model, model_name) in enumerate(zip(models, model_names)):\n",
     "\n",
-    "  theta1 = theta_out[:, 0]\n",
-    "  theta2 = theta_out[:, 1]\n",
+    "    theta_out = model.encoder_vmap(q_grid)\n",
+    "    #theta_out = torch.vmap(model.encoder)(q_grid)\n",
     "\n",
-    "  # Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
-    "  x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
-    "  y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
+    "    theta1 = theta_out[:, 0]\n",
+    "    theta2 = theta_out[:, 1]\n",
     "\n",
-    "  # --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
-    "  cw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
+    "    # Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
+    "    x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
+    "    y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
     "\n",
-    "  # Counterclockwise points\n",
-    "  x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
-    "  y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
-    "  theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
-    "  theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
+    "    # --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
+    "    cw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
+    "    # Counterclockwise points\n",
+    "    x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
+    "    y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "    theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
+    "    theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
+    "    thetas = [theta1_ccw, theta2_ccw]\n",
     "\n",
-    "  fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
-    "  # --- Bottom row: Counterclockwise ---\n",
-    "  sc3 = axes[0].scatter(x_end_ccw, y_end_ccw, c=theta1_ccw, cmap='viridis', s=5)\n",
-    "  axes[0].set_title(\"Theta0 - Counterclockwise\")\n",
-    "  axes[0].set_xlabel(\"x\")\n",
-    "  axes[0].set_ylabel(\"y\")\n",
-    "  plt.colorbar(sc3, ax=axes[0])\n",
+    "    for j in range(2):\n",
+    "        sc = axes[i, j].scatter(x_end_ccw, y_end_ccw, c=thetas[j], cmap='viridis', s=5)\n",
+    "        axes[i, j].set_title(\"th_\" + str(j) + \" - \" + model_names[i])\n",
+    "        axes[i, j].set_xlabel(\"x\")\n",
+    "        axes[i, j].set_ylabel(\"y\")\n",
+    "        plt.colorbar(sc, ax=axes[i, j])\n",
     "\n",
-    "  sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
-    "  axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
-    "  axes[1].set_xlabel(\"x\")\n",
-    "  axes[1].set_ylabel(\"y\")\n",
-    "  plt.colorbar(sc4, ax=axes[1])\n",
+    "\n",
+    "    #sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
+    "    #axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
+    "    #axes[1].set_xlabel(\"x\")\n",
+    "    #axes[1].set_ylabel(\"y\")\n",
+    "    #plt.colorbar(sc4, ax=axes[1])\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(theta_xy_fig_path)\n",
