Change sim parameters

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -73,12 +73,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_start = torch.tensor([-2., -4.]).requires_grad_().to(device)\n",
+    "xy_start = torch.tensor([4., -1.9]).requires_grad_().to(device)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
     "\n",
-    "xy_des_real = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
+    "xy_des_real = torch.tensor([2.1, -2.]).requires_grad_().to(device)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)"
    ]
   },
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_spring = 10."
+    "k_spring = 0.05"
    ]
   },
   {
