Calculate Mq, Gq Cq des properly with gradient w.r.t. theta

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -110,9 +110,10 @@
     "th_des = model.encoder_vmap(q_des)\n",
     "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
-    "q_des_est = model.decoder_vmap(th_des, is_clockwise_des)\n",
-    "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
+    "\n",
+    "q_des_hat = model.decoder_vmap(th_des, is_clockwise_des)\n",
+    "q_d_des_hat = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
+    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_hat[0])\n",
     "\n",
     "print(q_start)"
    ]
@@ -126,8 +127,8 @@
     "J_h_inv_des = model.jacobian_dec(th_des, is_clockwise_des).squeeze(0)\n",
     "J_h_inv_trans_des = torch.transpose(J_h_inv_des, 0, 1)\n",
     "\n",
-    "M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_des.squeeze(0), q_d_des.squeeze(0))\n",
-    "G_q__des = dynamics.add_spring_force_G_q(rp, q_des, G_q_des, k_spring)\n",
+    "M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_des_hat.squeeze(0), q_d_des_hat.squeeze(0))\n",
+    "G_q_des = dynamics.add_spring_force_G_q(rp, q_des_hat, G_q_des, k_spring)\n",
     "M_th_des, C_th_des, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
     "print(\"M_th_des:\\n\", M_th_des)\n",
     "K = torch.tensor([[1., 1., 1., 1.]]).to(device)\n",
