Make Mq, Cq, Gq gradient w.r.t. theta

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -195,25 +195,27 @@
     "    th = model.encoder_vmap(q)\n",
     "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
     "\n",
-    "    q = model.decoder_vmap(th, clockwise=model_cw)\n",
-    "    q_d = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "    q_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "    q_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
     "    \n",
     "    \"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\n",
-    "    is_clockwise = transforms.check_clockwise(q.squeeze(0))\n",
+    "    is_clockwise = transforms.check_clockwise(q_hat.squeeze(0))\n",
     "    \n",
     "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
     "    print(\"q:\", q)\n",
     "    print(\"q_d:\", q_d)\n",
+    "    print(\"q_hat:\", q_hat)\n",
+    "    print(\"q_d_hat:\", q_d_hat)\n",
     "    print(\"th:\", th)\n",
     "    print(\"th_d:\", th_d)\n",
     "\n",
     "\n",
-    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
-    "    G_q_est = dynamics.add_spring_force_G_q(rp, q, G_q_est, k_spring)\n",
-    "    A_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
+    "    G_q_est = dynamics.add_spring_force_G_q(rp, q_hat, G_q_est, k_spring)\n",
+    "    A_q_est = dynamics.input_matrix(rp, q_hat.squeeze(0))\n",
     "\n",
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
