Small printing and QoL fixes

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -224,13 +224,12 @@
     "\n",
     "    Y = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, device)\n",
     "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, C_th, G_th, A_th, Y)\n",
+    "\n",
+    "    print(\"alpha:\", alpha)\n",
+    "    print(\"beta:\", beta)\n",
     "    v = normal_form.calculate_v(Y, Y_des, K)\n",
     "    u = normal_form.calculate_u(alpha, beta, v)\n",
-    "    #u = torch.tensor([[0]]).to(device)\n",
-    "    #u = u + torch.pinverse(A_th) @ G_th #Gravity compensation\n",
-    "\n",
     "    print(\"Y:\", Y)\n",
-    "    print(\"alpha, beta:\", alpha, beta)\n",
     "    print(\"v:\", v)\n",
     "    print(\"u:\", u)\n",
     "\n",
@@ -273,6 +272,9 @@
     "    u_series = torch.cat((u_series, u.detach()), dim=0)\n",
     "    print(\"\")\n",
     "\n",
+    "    if torch.isnan(q[0,0]):\n",
+    "        break\n",
+    "\n",
     "    \n",
     "    \n"
    ]
@@ -310,11 +312,9 @@
     "stride = 1\n",
     "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
     "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
-    "#pos_end_q_naive, pos_elbow_q_naive = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_naive_series[::stride])\n",
     "\n",
     "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
     "frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est)\n",
-    "#frames_q_naive = plotter.frame_pendulum(pos_end_q_naive, pos_elbow_q_naive)\n",
     "\n",
     "data_real = {\n",
     "    \"frames\": frames_q_real,\n",
@@ -332,16 +332,6 @@
     "    \"act_color\": \"tab:red\"\n",
     "} \n",
     "\n",
-    "\"\"\"\n",
-    "data_naive = {\n",
-    "    \"frames\": frames_q_naive,\n",
-    "    \"times\": dt,\n",
-    "    \"name\": \"q_naive\",\n",
-    "    \"arm_color\": \"tab:green\", \n",
-    "    \"act_color\": \"tab:olive\"\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
     "ref_pos_real = {\n",
     "    \"pos\": xy_des_real,\n",
     "    \"name\": \"real\",\n",
@@ -354,19 +344,11 @@
     "    \"color\": \"tab:orange\"\n",
     "}\n",
     "\n",
-    "\"\"\"\n",
-    "ref_pos_naive = {\n",
-    "    \"pos\": xy_des_real,\n",
-    "    \"name\": \"naive\",\n",
-    "    \"color\": \"tab:green\"\n",
-    "}\n",
-    "\"\"\"\n",
     "\n",
-    "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
     "\n",
-    "frames_data = [data_real, data_est]#, data_naive]\n",
-    "#frames_data = [data_est]\n",
-    "#frames_data = [data_real]\n",
+    "ref_poss = [ref_pos_real]#, ref_pos_est]\n",
+    "\n",
+    "frames_data = [data_real, data_est]\n",
     "\n",
     "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
     "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
