--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -149,6 +149,7 @@
     "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_est_series, q_d_est_series, q_dd_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "Y_series = torch.empty((0,4)).to(device)\n",
     "u_series = torch.empty((0,1)).to(device)\n",
     "\n",
     "\n",
@@ -270,6 +271,7 @@
     "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est.detach()), dim=0) \n",
     "\n",
     "    u_series = torch.cat((u_series, u.detach()), dim=0)\n",
+    "    Y_series = torch.cat((Y_series, Y.detach().T))\n",
     "    print(\"\")\n",
     "\n",
     "    if torch.isnan(q[0,0]):\n",
