Change video plotter and add error image plotter

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -371,8 +371,7 @@
     "    file_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
     "    output_path = os.path.join(save_dir, file_name)\n",
     "    \n",
-    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 0.1/(dt*stride), dt = dt*stride)\n",
-    "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n"
+    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 0.1/(dt*stride), dt = dt*stride)"
    ]
   },
   {
@@ -380,7 +379,138 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datasets_q = [\n",
+    "    #{\n",
+    "    #    \"name\": \"est\",\n",
+    "    #    \"values\": q_est_series.cpu().detach().numpy(),\n",
+    "    #    \"color\": \"tab:orange\"\n",
+    "    #},\n",
+    "    {\n",
+    "        \"name\": \"real\",\n",
+    "        \"values\": q_real_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:blue\"\n",
+    "    }\n",
+    "]\n",
+    "datasets_th = [\n",
+    "    {\n",
+    "        \"name\": \"est\",\n",
+    "        \"values\": th_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:orange\"\n",
+    "    }#,56\n",
+    "    #{\n",
+    "    #    \"name\": \"ana\",\n",
+    "    #    \"values\": th_\n",
+    "    #    \"color\": \"tab:blue\"\n",
+    "    #}\n",
+    "]\n",
+    "\n",
+    "datasets_xy = [\n",
+    "    #{\n",
+    "    #    \"name\": \"est\",\n",
+    "    #    \"values\": xy_est_series.cpu().detach().numpy(),\n",
+    "    #    \"color\": \"tab:orange\"\n",
+    "    #},print(\"M_th_des:\\n\", M_th_des)\n",
+    "    {\n",
+    "        \"name\": \"real\",\n",
+    "        \"values\": xy_real_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:blue\"\n",
+    "    }#,\n",
+    "    #{\n",
+    "    #    \"name\": \"naive\",\n",
+    "    #    \"values\": xy_naive_series.cpu().detach().numpy(),\n",
+    "    #    \"color\": \"tab:green\"\n",
+    "    #}\n",
+    "]\n",
+    "\n",
+    "# Common labels for the plots.\n",
+    "name_q = \"q trajectory\"\n",
+    "name_th = \"th trajectory\"\n",
+    "name_xy = \"xy trajectory\"\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
+    "t_series = torch.arange(0, 0.86, 0.01)\n",
+    "\n",
+    "# Create an instance of ErrorPlotter.\n",
+    "ep = pendulum_plot.Error_plotter(rp)\n",
+    "\n",
+    "# Prepare plot datasets for each column.\n",
+    "# Each call groups a set of datasets to be drawn in one subplot column.\n",
+    "column1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
+    "column2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
+    "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
+    "plot_datasets = [column1, column2, column3]\n",
+    "\n",
+    "file_name = \"Error plot.png\"\n",
+    "file_counter = 0\n",
+    "\n",
+    "output_path = os.path.join(save_dir, file_name)\n",
+    "\n",
+    "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
+    "ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_double_vs_time(double_list, dt, ylabel, title):\n",
+    "    time = torch.arange(0, double_list.shape[0] * dt, dt).numpy()\n",
+    "    double_np = double_list.numpy()\n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, double_np[:, 0], label=\"θ̇0\")\n",
+    "    plt.plot(time, double_np[:, 1], label=\"θ̇1\")\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_single_vs_time(single_list, dt):\n",
+    "    time = torch.arange(0, single_list.size(0) * dt, dt).numpy()\n",
+    "    single_np = single_list.numpy()\n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, single_np, label=\"u\")\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(\"Control Input (N)\")\n",
+    "    plt.title(\"Control Input vs Time\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    #plt.yscale(\"log\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_quad_vs_time(quad_list, dt, ylabel, title):\n",
+    "    time = torch.arange(0, quad_list.shape[0] * dt, dt).numpy()\n",
+    "    quad_np = quad_list.numpy()\n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, quad_np[:, 0], label=\"Y\")\n",
+    "    plt.plot(time, quad_np[:, 1], label=\"Y'\")\n",
+    "    plt.plot(time, quad_np[:, 2], label=\"Y''\")\n",
+    "    plt.plot(time, quad_np[:, 3], label=\"Y'''\")\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_double_vs_time(th_series, dt, \"theta\", \"theta vs time\")"
+   ]
   }
  ],
  "metadata": {
