--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -221,7 +221,7 @@
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
     "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
     "\n",
     "    Y = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, device)\n",
     "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, C_th, G_th, A_th, Y)\n",
