--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -132,7 +132,7 @@
     "M_th_des, C_th_des, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
     "\n",
     "K = torch.tensor([[10., 100., 100., 100.]]).to(device)\n",
-    "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, C_th_des, G_th_des, device)\n",
+    "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, G_th_des, device)\n",
     "Y_des = torch.tensor([[Y_des_u[0,0]], [0], [0], [0]])\n",
     "print(\"Y_des_u:\\n\", Y_des_u)\n",
     "print(\"Y_des:\\n\", Y_des)"
@@ -223,8 +223,8 @@
     "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
     "\n",
-    "    Y = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, device)\n",
-    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, C_th, G_th, A_th, Y)\n",
+    "    Y = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
+    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
     "\n",
     "    print(\"alpha:\", alpha)\n",
     "    print(\"beta:\", beta)\n",
