Make plotting functions use input titles

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -460,8 +460,8 @@
     "    double_np = double_list.numpy()\n",
     "\n",
     "    plt.figure(figsize=(7, 3))\n",
-    "    plt.plot(time, double_np[:, 0], label=\"θ̇0\")\n",
-    "    plt.plot(time, double_np[:, 1], label=\"θ̇1\")\n",
+    "    plt.plot(time, double_np[:, 0], label=ylabel+\"0\")\n",
+    "    plt.plot(time, double_np[:, 1], label=ylabel+\"1\")\n",
     "    plt.xlabel(\"Time (s)\")\n",
     "    plt.ylabel(ylabel)\n",
     "    plt.title(title)\n",
@@ -470,15 +470,15 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "def plot_single_vs_time(single_list, dt):\n",
+    "def plot_single_vs_time(single_list, dt, ylabel, title):\n",
     "    time = torch.arange(0, single_list.size(0) * dt, dt).numpy()\n",
     "    single_np = single_list.numpy()\n",
     "\n",
     "    plt.figure(figsize=(7, 3))\n",
-    "    plt.plot(time, single_np, label=\"u\")\n",
+    "    plt.plot(time, single_np, label=ylabel)\n",
     "    plt.xlabel(\"Time (s)\")\n",
-    "    plt.ylabel(\"Control Input (N)\")\n",
-    "    plt.title(\"Control Input vs Time\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    #plt.yscale(\"log\")\n",
@@ -509,8 +509,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_double_vs_time(th_series, dt, \"theta\", \"theta vs time\")"
+    "plot_double_vs_time(th_series[:105], dt, \"theta\", \"theta vs time\")\n",
+    "plot_single_vs_time(th_series[:, 1], dt, \"theta1\", \"theta1 vs time\")\n",
+    "plot_quad_vs_time(Y_series[:105], dt, \"Y\", \"Y vs time\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
