--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -9,11 +9,11 @@
     "import torch\n",
     "import os\n",
     "import sys\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.insert(0, module_path)\n",
-    "print(sys.path)\n",
     "\n",
     "import Learning.autoencoders as autoencoders\n",
     "import Double_Pendulum.robot_parameters as robot_parameters\n",
@@ -28,7 +28,10 @@
     "rp[\"m1\"] = 0.\n",
     "model = autoencoders.Analytic_transformer(rp)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model_cw = False"
+    "model_cw = False\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
