Add plotting functions

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -39,6 +39,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def plot_single_vs_time(single_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "    time = torch.linspace(0, (single_list.shape[0] - 1) * dt, single_list.shape[0]).numpy()\n",
+    "    single_np = single_list.cpu().numpy()\n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, single_np, label=ylabel)\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    #plt.yscale(\"log\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_double_vs_time(double_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "    time = torch.linspace(0, (double_list.shape[0] - 1) * dt, double_list.shape[0]).numpy()\n",
+    "    double_np = double_list.cpu().numpy()\n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, double_np[:, 0], label=ylabel+\"0\")\n",
+    "    plt.plot(time, double_np[:, 1], label=ylabel+\"1\")\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_quad_vs_time(quad_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "    time = torch.linspace(0, (quad_list.shape[0] - 1) * dt, quad_list.shape[0]).numpy()\n",
+    "    quad_np = quad_list.cpu().numpy()\n",
+    "    \n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, quad_np[:, 0], label=\"Y\")\n",
+    "    plt.plot(time, quad_np[:, 1], label=\"Y'\")\n",
+    "    plt.plot(time, quad_np[:, 2], label=\"Y''\")\n",
+    "    plt.plot(time, quad_np[:, 3], label=\"Y'''\")\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
