Define starting parameters

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -108,11 +108,13 @@
    "outputs": [],
    "source": [
     "xy_start = torch.tensor([4., -1.9]).requires_grad_().to(device)\n",
+    "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
     "\n",
-    "xy_des_real = torch.tensor([2.1, -2.]).requires_grad_().to(device)\n",
+    "xy_des_real = torch.tensor([1.9262, -2.1004]).requires_grad_().to(device)\n",
+    "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)"
    ]
   },
@@ -122,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_spring = 0.05"
+    "K = torch.tensor([[10., 100., 100., 100.]]).to(device)\n",
+    "k_spring = 0.5"
    ]
   },
   {
@@ -131,25 +134,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "is_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
+    "\n",
     "th_start = model.encoder_vmap(q_start)\n",
     "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
-    "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas. Do I care?\n",
     "\n",
     "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
     "th_des = model.encoder_vmap(q_des)\n",
     "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
+    "#th_des = torch.tensor([[6.1008,  1.558694425]]).requires_grad_().to(device)\n",
+    "#th_d_des = torch.tensor([[0.,  0.]]).requires_grad_().to(device)\n",
+    "\n",
     "\n",
     "q_des_hat = model.decoder_vmap(th_des, is_clockwise_des)\n",
     "q_d_des_hat = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
     "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_hat[0])\n",
     "\n",
-    "print(q_start)"
+    "print(\"th_start:\", th_start)\n",
+    "print(\"th_d_start:\", th_d_start)\n",
+    "print(\"th_des\", th_des)\n",
+    "print(\"q_des_hat\", q_des_hat)\n",
+    "print(\"xy_des_est\", xy_des_est)"
    ]
   },
   {
