--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -173,8 +173,8 @@
     "G_q_des = dynamics.add_spring_force_G_q(rp, q_des_hat, G_q_des, k_spring)\n",
     "M_th_des, C_th_des, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
     "\n",
-    "K = torch.tensor([[10., 100., 100., 100.]]).to(device)\n",
-    "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, C_th_des, G_th_des, device)\n",
+    "\n",
+    "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, G_th_des, device)\n",
     "Y_des = torch.tensor([[Y_des_u[0,0]], [0], [0], [0]]).to(device)\n",
     "print(\"Y_des_u:\\n\", Y_des_u)\n",
     "print(\"Y_des:\\n\", Y_des)"
