Specify saving variables for qsim

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -195,11 +195,11 @@
    "source": [
     "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "q_est_series, q_d_est_series, q_dd_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "Y_series = torch.empty((0,4)).to(device)\n",
-    "u_series = torch.empty((0,1)).to(device)\n",
+    "th_series_qsim, th_d_series_qsim, th_dd_series_qsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_est_series_qsim, q_d_est_series_qsim, q_dd_est_series_qsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_real_series_qsim, q_d_real_series_qsim, q_dd_real_series_qsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "Y_series_qsim = torch.empty((0,4)).to(device)\n",
+    "u_series_qsim = torch.empty((0,1)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
@@ -291,20 +291,20 @@
     "\n",
     "    \"\"\" Store data for plotting \"\"\"\n",
     "\n",
-    "    th_series = torch.cat((th_series, th.detach()), dim=0)\n",
-    "    th_d_series = torch.cat((th_d_series, th_d.detach()), dim=0)\n",
-    "    th_dd_series = torch.cat((th_dd_series, th_dd.detach()), dim=0)\n",
+    "    th_series_qsim = torch.cat((th_series_qsim, th.detach()), dim=0)\n",
+    "    th_d_series_qsim = torch.cat((th_d_series_qsim, th_d.detach()), dim=0)\n",
+    "    th_dd_series_qsim = torch.cat((th_dd_series_qsim, th_dd.detach()), dim=0)\n",
     "    \n",
-    "    q_real_series = torch.cat((q_real_series, q_real.detach()), dim=0)\n",
-    "    q_d_real_series = torch.cat((q_d_real_series, q_d_real.detach()), dim=0)\n",
-    "    q_dd_real_series = torch.cat((q_dd_real_series, q_dd_real.detach()), dim=0)\n",
+    "    q_real_series_qsim = torch.cat((q_real_series_qsim, q_real.detach()), dim=0)\n",
+    "    q_d_real_series_qsim = torch.cat((q_d_real_series_qsim, q_d_real.detach()), dim=0)\n",
+    "    q_dd_real_series_qsim = torch.cat((q_dd_real_series_qsim, q_dd_real.detach()), dim=0)\n",
     "\n",
-    "    q_est_series = torch.cat((q_est_series, q_est.detach()), dim=0)\n",
-    "    q_d_est_series = torch.cat((q_d_est_series, q_d_est.detach()), dim=0)\n",
-    "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est.detach()), dim=0) \n",
+    "    q_est_series_qsim = torch.cat((q_est_series_qsim, q_est.detach()), dim=0)\n",
+    "    q_d_est_series_qsim = torch.cat((q_d_est_series_qsim, q_d_est.detach()), dim=0)\n",
+    "    q_dd_est_series_qsim = torch.cat((q_dd_est_series_qsim, q_dd_est.detach()), dim=0) \n",
     "\n",
-    "    u_series = torch.cat((u_series, u.detach()), dim=0)\n",
-    "    Y_series = torch.cat((Y_series, Y.detach().T))\n",
+    "    u_series_qsim = torch.cat((u_series_qsim, u.detach()), dim=0)\n",
+    "    Y_series_qsim = torch.cat((Y_series_qsim, Y.detach().T))\n",
     "    print(\"\")\n",
     "\n",
     "    if torch.isnan(q[0,0]):\n",
