Change th-sim function calls and print statements

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -208,7 +208,9 @@
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
-    "th_dd = th_dd_start\n",
+    "\n",
+    "th_thsim = th_start\n",
+    "th_d_thsim = th_d_start\n",
     "\n",
     "q_est = model.decoder(th_start, clockwise=is_clockwise_start)\n",
     "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
@@ -248,18 +250,18 @@
     "    M_th = torch.tensor([[rp[\"m2\"], 0.], [0., rp[\"m2\"]]]).to(device).requires_grad_(True)\n",
     "    M_th = M_th * th/th\n",
     "    C_th = torch.tensor([[0, 0.], [0., 0.]]).to(device).requires_grad_(True)\n",
-    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
     "\n",
-    "    Y = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, device)\n",
-    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, C_th, G_th, A_th, Y)\n",
+    "    Y = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
+    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
     "\n",
-    "    print(\"alpha:\", alpha)\n",
-    "    print(\"beta:\", beta)\n",
+    "    #print(\"alpha:\", alpha)\n",
+    "    #print(\"beta:\", beta)\n",
     "    v = normal_form.calculate_v(Y, Y_des, K)\n",
     "    u = normal_form.calculate_u(alpha, beta, v)\n",
-    "    print(\"Y:\", Y)\n",
-    "    print(\"v:\", v)\n",
-    "    print(\"u:\", u)\n",
+    "    #print(\"Y:\", Y)\n",
+    "    #print(\"v:\", v)\n",
+    "    #print(\"u:\", u)\n",
     "\n",
     "    \"\"\" Recalculate \"real system\" based on modified matrices in theta-space. \"\"\"\n",
     "\n",
