Make J_h function of theta

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -265,18 +265,16 @@
     "\n",
     "    \"\"\" Recalculate \"real system\" based on modified matrices in theta-space. \"\"\"\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
+    "    J_h = model.jacobian_enc(q_hat)\n",
+    "    J_h_trans = torch.transpose(J_h, 0, 1)\n",
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
-    "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
-    "    G_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring)\n",
-    "    A_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
+    "    M_q_real, C_q_real, G_q_real = transforms.transform_dynamical_from_inverse(M_th, C_th, G_th, q_hat, q_d_hat, J_h, J_h_trans)\n",
+    "    A_q_real = transforms.transform_input_matrix_from_inverse_trans(A_th, J_h_trans)    \n",
     "\n",
     "    tau_q_real = A_q_real * u\n",
-    "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T \n",
     "    q_d_real = q_d_real + q_dd_real * dt\n",
     "    q_real = q_real + q_d_real * dt\n",
     "    q_real = transforms.wrap_to_pi(q_real)\n",
