Add theta-loop, prints

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -280,6 +280,11 @@
     "    q_real = transforms.wrap_to_pi(q_real)\n",
     "    \n",
     "\n",
+    "    tau_th = A_th * u\n",
+    "    th_dd_thsim = (torch.pinverse(M_th) @ (tau_th - C_th @ ((th_d).T)- G_th)).T\n",
+    "    th_d_thsim = th_d_thsim + th_dd_thsim * dt\n",
+    "    th_thsim = th_thsim + th_d_thsim * dt\n",
+    "\n",
     "    q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
     "    th = model.encoder_vmap(q_real_shifted)\n",
     "    q_est = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
@@ -287,6 +292,14 @@
     "    th_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
     "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
     "    q_dd_est = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Implement with Jacobian derivative\n",
+    "\n",
+    "\n",
+    "    print(\"q_real:\", q_real)\n",
+    "    print(\"th_real:\", th)\n",
+    "    print(\"th_thsim:\", th_thsim)\n",
+    "    print(\"q_d_real:\", q_d_real)\n",
+    "    print(\"th_d_real:\", th_d)\n",
+    "    print(\"th_d_thsim:\", th_d_thsim)\n",
     "\n",
     "\n",
     "    \"\"\" Store data for plotting \"\"\"\n",
